--- a/trust_worthiness/Send.html
+++ b/trust_worthiness/Send.html
@@ -4,151 +4,251 @@
 
 
 {{ block styles }}
-<style>
+
+    <style>
 
 
-    table {
-        border-collapse: collapse;
-    {#border: 1px solid black;#} margin: auto;
-        margin-bottom: 5%;
+        table {
+            border-collapse: collapse;
+        {#border: 1px solid black;#} margin: auto;
+            margin-bottom: 5%;
 
-    }
+        }
 
-    table.results {
+        table.results {
 
-    {#border: 1px solid black;#} width: 95%;
+        {#border: 1px solid black;#} width: 95%;
 
-    }
+        }
 
-    td.results {
-        padding-left: 15px;
-    }
+        td.results {
+            padding-left: 15px;
+        }
 
-    th.results {
-        border-bottom: 1px solid black;
-        padding-left: 15px;
-    }
+        th.results {
+            border-bottom: 1px solid black;
+            padding-left: 15px;
+        }
 
-    tr.results {
-        border-bottom: 1px solid lightgrey;
-        height: 2.5em;
-        vertical-align: middle;
-    }
+        tr.results {
+            border-bottom: 1px solid lightgrey;
+            height: 2.5em;
+            vertical-align: middle;
+        }
 
-    h2 {
-        text-align: center;
-    }
+        h2 {
+            text-align: center;
+        }
 
-    div.centered {
-        text-align: center;
-    }
+        div.centered {
+            text-align: center;
+        }
 
-    div.right {
-        text-align: right;
-    }
+        div.right {
+            text-align: right;
+        }
 
-    .form-group {
-        text-align: center;
-        margin: auto;
+        .form-group {
+            text-align: center;
+            margin: auto;
 
-    }
+        }
 
-    .controls {
-        margin: auto;
-        width: 30%;
+        .controls {
+            margin: auto;
+            width: 30%;
 
 
-    }
+        }
 
-    img {
-        max-width: 100%;
-        height: auto;
-    }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
 
-    linear_scale .statement {
-        display: block;
-        font-size: 14px;
-        font-weight: bold;
-        padding: 30px 0 0 4.25%;
-        margin-bottom: 10px;
-    }
+        linear_scale {
+            display: block;
+            font-size: 14px;
+            font-weight: bold;
+            padding: 30px 0 0 4.25%;
+            margin-bottom: 10px;
+        }
 
-    linear_scale .likert {
-        list-style: none;
-        width: 100%;
-        margin: 0;
-        padding: 0 0 35px;
-        display: block;
-        border-bottom: 2px solid #efefef;
-    }
+        linear_scale {
+            list-style: none;
+            width: 100%;
+            margin: 0;
+            padding: 0 0 35px;
+            display: block;
+            border-bottom: 2px solid #efefef;
+        }
 
-    linear_scale .likert:last-of-type {
-        border-bottom: 0;
-    }
+        linear_scale last-of-type {
+            border-bottom: 0;
+        }
 
-    linear_scale .likert:before {
-        content: '';
-        position: relative;
-        top: 11px;
-        left: 9.5%;
-        display: block;
-        background-color: #efefef;
-        height: 4px;
-        width: 78%;
-    }
+        linear_scale ul::before {
+            content: '';
+            position: relative;
+            top: 16px;
+            left: 9.5%;
+            display: block;
+            background-color: #efefef;
+            height: 4px;
+            width: 78%;
+        }
 
-    linear_scale .likert li {
-        display: inline-block;
-        width: 19%;
-        text-align: center;
-        vertical-align: top;
-    }
+        linear_scale li {
+            display: inline-block;
+            width: 19%;
+            text-align: center;
+            vertical-align: top;
+        }
 
-    linear_scale .likert li input[type=radio] {
-        display: block;
-        position: relative;
-        top: 0;
-        left: 50%;
-        margin-left: -6px;
+        linear_scale li input[type=radck(Page):
+    form_model = 'groio] {
+            display: block;
+            position: relative;
+            top: 0;
+            left: 50%;
+            margin-left: -6px;
 
-    }
+        }
 
-    linear_scale .likert li label {
-        width: 100%;
-    }
+        linear_scale li label {
+            width: 100%;
+        }
 
-    linear_scale .buttons {
-        margin: 30px 0;
-        padding: 0 4.25%;
-        text-align: right
-    }
+        linear_scale .buttons {
+            margin: 30px 0;
+            padding: 0 4.25%;
+            text-align: right
+        }
 
-    linear_scale .buttons button {
-        padding: 5px 10px;
-        background-color: #67ab49;
-        border: 0;
-        border-radius: 3px;
-    }
-</style>
+        linear_scale .buttons button {
+            padding: 5px 10px;
+            background-color: #67ab49;
+            border: 0;
+            border-radius: 3px;
+
+        }
+
+        p.question {
+            padding-top: 15px;
+            font-weight: bold;
+        }
+
+            linear_scale .statement {
+                display: block;
+                font-size: 14px;
+                font-weight: bold;
+                padding: 30px 0 0 4.25%;
+                margin-bottom: 10px;
+            }
+
+            linear_scale .likert {
+                list-style: none;
+                width: 100%;
+                margin: 0;
+                padding: 0 0 35px;
+                display: block;
+                border-bottom: 2px solid #efefef;
+            }
+
+            linear_scale .likert:last-of-type {
+                border-bottom: 0;
+            }
+
+            linear_scale .likert:before {
+                content: '';
+                position: relative;
+                top: 11px;
+                left: 9.5%;
+                display: block;
+                background-color: #efefef;
+                height: 4px;
+                width: 78%;
+            }
+
+            linear_scale .likert li {
+                display: inline-block;
+                width: 19%;
+                text-align: center;
+                vertical-align: top;
+            }
+
+            linear_scale .likert li input[type=radio] {
+                display: block;
+                position: relative;
+                top: 0;
+                left: 50%;
+                margin-left: -6px;
+
+            }
+
+            linear_scale .likert li label {
+                width: 100%;
+            }
+
+            linear_scale .buttons {
+                margin: 30px 0;
+                padding: 0 4.25%;
+                text-align: right
+            }
+
+            linear_scale .buttons button {
+                padding: 5px 10px;
+                background-color: #67ab49;
+                border: 0;
+                border-radius: 3px;
+            }
+
+            td {
+                border: no border;
+            }
+
+            tr td:last-child {
+                width: 1%;
+                white-space: nowrap;
+            }
+
+    </style>
 
 {{ endblock }}
 
 {{ block content }}
 
 <div class="centered">
-    <p>Sie spielen diese Runde mit einem zufälligen Teilnehmer B.</p>
-</div>
+    <p style="text-align: center">Sie spielen diese Runde mit einem zufälligen Teilnehmer B.</p>
 
 
-<p style="text-align: center">
+
+<p>
     Sie haben diese Runde {{ C.ENDOWMENT }} zur Verfügung. Wie viel wollen Sie an Teilnehmer B senden?
 </p>
 
+<p>
+  <table>
+    <tr>
+      {{ for choice in form.sent_amount }}
+      <th> {{ choice.label}} </th>
+      {{ endfor }}
+    </tr>
 
-<ul class='likert'>
-  <strong>{{ formfields }}</strong>
-</ul>
+    <tr>
+      {{ for choice in form.sent_amount }}
+      <td width="1%"> {{ choice }} </td>
+      {{ endfor }}
+    </tr>
+    </table>
+</p>
 
-    {{ next_button }}
+
+
+</div>
+
+<p style="text-align: center">
+  {{ next_button }}
+</p>
 
 {{ endblock }}
