--- a/trust_worthiness/Results.html
+++ b/trust_worthiness/Results.html
@@ -58,7 +58,7 @@
 
     <p>
         {{ C.A_ROLE }} hat Ihnen diese Runde {{ group.sent_amount }} überwiesen.<br>
-        Der Betrag wurde verdreifacht, Sie verfügten also über insgesamt {{ tripled_amount }}.<br>
+        Der Betrag wurde verdreifacht, Sie verfügten also über insgesamt {{ available_amount }}.<br>
         Sie entschieden sich, insgesamt {{ group.sent_back_amount }} an {{ C.A_ROLE }} zu überweisen
     </p>
 
