--- a/trust_worthiness/Send.html
+++ b/trust_worthiness/Send.html
@@ -247,8 +247,11 @@
 
 </div>
 
-<p style="text-align: center">
-  {{ next_button }}
-</p>
+    <div style="text-align: right">
+        <p>
+
+          {{ next_button }}
+        </p>
+    </div>
 
 {{ endblock }}
