--- a/trust_worthiness/SendBack.html
+++ b/trust_worthiness/SendBack.html
@@ -9,11 +9,9 @@
 
     table {
         border-collapse: collapse;
-    {#border: 1px solid black;#} margin: auto;
+        margin: auto;
         margin-bottom: 5%;
         width: 40%;
-
-
     }
 
 
